--- a/121-Including-Bootstrap-Containers/index.html
+++ b/121-Including-Bootstrap-Containers/index.html
@@ -12,13 +12,19 @@
 </head>
 
 <body>
-    <h1>Placeholder</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam sunt atque saepe maiores tempore temporibus
-        quibusdam autem, magnam illum eaque, a nostrum earum ullam eius, suscipit nam at consequatur! Autem corrupti
-        culpa eius cum consequatur dolor rerum molestias ipsam, porro corporis fuga ducimus mollitia ratione, obcaecati
-        nihil impedit ex totam eveniet modi at dicta sapiente ad tenetur! Corporis eum molestiae voluptatum commodi
-        distinctio ad, quia placeat vitae similique dignissimos neque soluta molestias. Itaque, velit, fugit, sequi odio
-        ad officia enim accusantium iusto eveniet nulla quod? Reprehenderit tempore possimus corporis quia!</p>
+
+    <div class="container">
+        <h1>Placeholder</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam sunt atque saepe maiores tempore
+            temporibus
+            quibusdam autem, magnam illum eaque, a nostrum earum ullam eius, suscipit nam at consequatur! Autem corrupti
+            culpa eius cum consequatur dolor rerum molestias ipsam, porro corporis fuga ducimus mollitia ratione,
+            obcaecati
+            nihil impedit ex totam eveniet modi at dicta sapiente ad tenetur! Corporis eum molestiae voluptatum commodi
+            distinctio ad, quia placeat vitae similique dignissimos neque soluta molestias. Itaque, velit, fugit, sequi
+            odio
+            ad officia enim accusantium iusto eveniet nulla quod? Reprehenderit tempore possimus corporis quia!</p>
+    </div>
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
