--- a/122-Bootstrap-Buttons/index.html
+++ b/122-Bootstrap-Buttons/index.html
@@ -15,8 +15,13 @@
     <h1>Bootstrap Button</h1>
 
     <button type="button" class="btn btn-primary">Primary</button>
-    <button type="button" class="btn btn-secondary">Secondary</button>
     <button type="button" class="btn btn-success">Success</button>
+    <button type="button" class="btn btn-info">Info</button>
+    <button type="button" class="btn btn-outline-warning">Warning</button>
+    <button type="button" class="btn btn-outline-danger">Danger</button>
+    <button type="button" class="btn btn-primary btn-lg">Large</button>
+    <button type="button" class="btn btn-secondary btn-sm">Small</button>
+
 
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum laborum distinctio amet dolorem perferendis!
       Alias, dolor atque ipsum labore ullam quod dolores.</p>
